<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/user_info_margin_top"
        android:background="@android:color/transparent"
        android:gravity="center"
        android:orientation="vertical"
        android:stretchColumns="0,1">

        <TableRow>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/user_info_margin_top"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:orientation="vertical"
                android:layout_span="2"
                android:stretchColumns="0,1">

                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/longitude"/>
                    <EditText
                        android:id="@+id/longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude"/>
                    <EditText
                        android:id="@+id/latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </TableRow>

                <TableRow>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/description"/>
                    <EditText
                        android:id="@+id/description"
                        android:layout_height="@dimen/edit_dlg_description_height"
                        android:inputType="text|textMultiLine"
                        android:gravity="top"
                        android:layout_width="match_parent" />
                </TableRow>

            </TableLayout>

        </TableRow>

        <TableRow>

            <Button
                android:id="@+id/edit_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save_btn" />

            <Button
                android:id="@+id/cancel_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_btn" />

        </TableRow>
    </TableLayout>

</LinearLayout>